<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:text="Add a new Credit"
        android:textSize="20sp"
        android:textColor="@color/DarkTextColor"
        android:gravity="center"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:minHeight="20dp"
        android:hint="@string/bado_hint_title"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textSize="16sp"
            android:lines="1"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/name_text_input"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="32dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="32dp"-->
<!--        android:layout_marginBottom="8dp"-->
<!--        android:minHeight="20dp"-->
<!--        android:hint="@string/bado_hint_name"-->
<!--        android:background="@android:color/transparent"-->
<!--        app:boxBackgroundColor="@android:color/transparent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/title_text_input"-->
<!--        app:layout_constraintVertical_bias="0">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/name_edit_text"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@android:color/transparent"-->
<!--            android:textSize="16sp"-->
<!--            android:lines="1"-->
<!--            android:maxLines="1" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->
<!--    <AutoCompleteTextView-->
<!--        android:id="@+id/name_auto"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_marginStart="32dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="32dp"-->
<!--        android:layout_marginBottom="8dp"-->
<!--        android:minHeight="20dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/title_text_input"-->
<!--        app:layout_constraintVertical_bias="0"-->
<!--        />-->
    <AutoCompleteTextView
        android:id="@+id/creditor_user"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/bado_credit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_input"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/bado_hint_amount"
        app:boxBackgroundColor="@android:color/white"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creditor_user"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="number"
            android:textSize="16sp"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_button"
        style="@style/bado.Button"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="50dp"
        android:text="@string/bado_add"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_text_input"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>